# python-backend-boilerplate

./: .gitignore  LICENSE  README.md  alembic.ini  check.sh  compose.yaml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 1706832268_edd828b5d42d_blog_posts_table.py
src/: app.py  config.py  container.py
src/blog/application/routers/: posts.py
src/blog/core/domain/: post.py
src/blog/core/ports/requires/: posts_repository.py
src/blog/infrastructure/database/repositories/: sql_post_row.py  sql_posts_repository.py
src/common/core/domain/: base_domain_model.py
src/common/core/ports/requires/: repository_protocol.py
src/common/infrastructure/database/repositories/: base_sql_repository.py  get_rows_for_alembic_tracking.py  sql_alchemy_declarative_base.py
tests/: config.py
tests/integration_tests/: conftest.py
tests/integration_tests/blog/infrastructure/repositories/: test_sql_posts_repository.py
tests/test_data/: mock_post.py
