[tool.poetry]
name = "ecoprom-backend"
version = "0.1.0"
description = ""
authors = [
    "KoroLion <korolion31@gmail.com>",
    "Nozemiso <nozemiso@gmail.com>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
psycopg = "^3.1.17"
sqlalchemy = {version = "^2.0.25", extras = ["asyncio"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pyright = "^1.1.39"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
strict = ["src", "tests"]

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 120
select = ["F", "E", "I", "C4", "ANN"]
ignore = ["ANN101", "ANN401"]